@@ -15,6 +15,9 @@ checkbox (0.16.4) saucy; urgency=low
     appropriate radio button in showTest if the test already has a result set
     rather than just defaulting to skip always (LP: #1181952)
 
+  [ Daniel Manrique ]
+  * jobs/stress.txt.in: fixed a few inconsistent invocations of sleep_test.
+
  -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100
 
 checkbox (0.16.3) saucy; urgency=low
